# DRUniversumLibTest

./: CMakeLists.txt
data/languages/de/: default.json
data/material/: README  defaultMaterials.json  hud.json
data/shader/: color.frag  color.vert  frameBuffer.vert  renderFont.frag  renderFont.vert  renderToTexture.frag  renderToTexture.vert  showFont.frag  showFont.vert  simple.frag  simple.vert  speedTest.frag
import/: updateImport.bat
include/: BaseGeometrieContainer.h  BindToRender.h  BlockSektorRenderer.h  FrameBuffer.h  Geometrie.h  MainRenderCall.h  Material.h  MicroSpacecraft.h  RenderToTexture.h  ShaderManager.h  ShaderProgram.h  SpaceCraftNode.h  Texture.h  UniformSet.h  World.h
include/hud/: BezierCurvesContainer.h  Font.h  FontLoaderTask.h  FontManager.h  Glyph.h  GlyphCalculate.h  HUDContainerNode.h  HUDElement.h  HUDRenderElementsToTexture.h  HUDRootNode.h  HUDText.h  TextGeom.h  TextManager.h  TextRenderer.h  TextToRender.h
src/: BaseGeometrieContainer.cpp  BlockSektorRenderer.cpp  FrameBuffer.cpp  Geometrie.cpp  MainRenderCall.cpp  Material.cpp  RenderToTexture.cpp  ShaderManager.cpp  ShaderProgram.cpp  SpaceCraftNode.cpp  Texture.cpp  UniformSet.cpp  World.cpp  main.cpp
src/hud/: BezierCurvesContainer.cpp  Font.cpp  FontLoaderTask.cpp  FontManager.cpp  Glyph.cpp  GlyphCalculate.cpp  HUDContainerNode.cpp  HUDElement.cpp  HUDRenderElementsToTexture.cpp  HUDRootNode.cpp  HUDText.cpp  TextGeom.cpp  TextManager.cpp  TextRenderer.cpp
